--- a/api/_assets/styles-36RHK6MJ.css
+++ b/api/_assets/styles-36RHK6MJ.css
@@ -9,18 +9,12 @@ body {
     font-family: system-ui;
     width: 100vw;
     height: 100vh;
-    background: hsl(40, 100%, 96.5%);
+    background: var(--amber2);
     display: flex;
     align-items: flex-start;
     justify-content: center;
     margin-top: 120px;
 }
-
-.ellipsis {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}  
 
 .amber {
     --amber1: hsl(39, 70.0%, 99.0%);
