--- a/api/_assets/styles-G46HAAII.css
+++ b/api/_assets/styles-G46HAAII.css
@@ -16,7 +16,7 @@ body {
     margin-top: 120px;
 }
 
-.ellipsis {
+.ellipses {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
